fixed arrow spacing issue on mobile

--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -67,10 +67,6 @@
     #skillsRightArrow, #skillsLeftArrow {
         width: 10vw;
     }
-
-    .leftArrow {
-        margin-left: 1px;
-    }
 }
         
 @media only screen and (min-width: 600px) {
